<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="4dp">

    <TextView
        android:id="@+id/tv_from_shipping_charge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/from_price"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_to_shipping_charge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/to_price"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_charge_shipping_charge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/charge_kr"
        android:textSize="12sp" />

</LinearLayout>