<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:background="#fff"

    android:minHeight="160dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialogtitleForgetPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/alert"
            android:textColor="@color/white"
            android:textSize="@dimen/medium"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/internet_unavailable_message"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok_internet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_green"
                android:text="@string/dialog_positive"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_close_internet"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_red"
                android:text="@string/close"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
