<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#fff"
    android:minHeight="200dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogtitleForgetPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="@dimen/medium"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/inputForgetPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/please_enter_your_email_address"
        android:inputType="textEmailAddress"
        android:paddingEnd="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        android:paddingStart="10dp"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        android:textSize="@dimen/login_text_size" />

    <Button
        android:id="@+id/buttonForgetPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_green"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>
